--- a/.env
+++ b/.env
@@ -40,5 +40,5 @@ DATABASE_URL=mysql://root@127.0.0.1:3306/PidevS_DB
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+MAILER_DSN=gmail://hazem.kharroubi@esprit.tn:Messi@1925@default?
 ###< symfony/mailer ###
