--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,7 +1,10 @@
 twig:
+
+    form_themes: [ 'bootstrap_5_layout.html.twig' ]
     default_path: '%kernel.project_dir%/templates'
     date:
         timezone: Africa/Tunis
+
 
 
 when@test:
